Fix horizontal overflow on mobile

--- a/style.css
+++ b/style.css
@@ -217,11 +217,14 @@ p {
 
     #svgLogo {
         transform: scale(2.25);
-        transform-origin: top center
+        transform-origin: top center;
     }
 
     .wave {
-        margin-bottom: 15vw;
+        max-width: 100%;
+        height: 35%;
+        margin-bottom: -30%;
+        overflow-x: hidden;
     }
 
     #mainContent {
